# USBHume2

./: .gitignore  README.md
PCB/: USBHume2.brd  USBHume2.sch
fw/Inc/: FreeRTOSConfig.h  dht.h  gpio.h  mxconstants.h  stm32f0xx_hal_conf.h  stm32f0xx_it.h  tim.h  usb_device.h  usbd_conf.h  usbd_custom_hid_if.h  usbd_desc.h
fw/MDK-ARM/: .gitignore  fw.uvoptx  fw.uvprojx
fw/MDK-ARM/RTE/: RTE_Components.h
fw/Middlewares/ST/STM32_USB_Device_Library/Class/CustomHID/Inc/: usbd_customhid.h
fw/Src/: dht.c  freertos.c  gpio.c  main.c  stm32f0xx_hal_msp.c  stm32f0xx_hal_timebase_TIM.c  stm32f0xx_it.c  tim.c  usbd_conf.c  usbd_custom_hid_if.c  usbd_desc.c
host/: CMakeLists.txt  Doxyfile.in
host/src/lib/: libusbhume.c  libusbhume.h
host/src/usbhume/: usbhume.c
host/src/usbhume2graphite/: config.go  main.go  usbhume.go
